新温度系统初版完成